finish data technical cleaning

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -200,6 +200,207 @@
     "# All subsequent cleaning and analysis will be performed on the 'df' DataFrame.\n",
     "print(f\"\\nData ready for automated cleaning. Current rows: {len(df)}.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6b80f250",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully converted 'Date_Sold' to datetime objects.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/sf/97mgdx1j24nbpzp1_h96gl_40000gn/T/ipykernel_16975/3148468026.py:7: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  df['Date_Sold'] = pd.to_datetime(df['Date_Sold'], errors='coerce')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ---------------------------------------------------------------------------\n",
+    "# 2. AUTOMATED CLEANING & FEATURE ENGINEERING\n",
+    "# ---------------------------------------------------------------------------\n",
+    "\n",
+    "# --- 2.1 Data Type Conversion ---\n",
+    "# Convert the 'Date_Sold' column from object (text) to datetime objects.\n",
+    "df['Date_Sold'] = pd.to_datetime(df['Date_Sold'], errors='coerce')\n",
+    "\n",
+    "# Check if any dates failed to convert\n",
+    "if df['Date_Sold'].isnull().any():\n",
+    "    print(\"Warning: Some dates could not be parsed and have been set to NaT.\")\n",
+    "\n",
+    "print(\"Successfully converted 'Date_Sold' to datetime objects.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9da2060",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting technical cleaning...\n",
+      "Successfully converted 'Date_Sold' to datetime objects.\n",
+      "Engineered new features: 'Sale_Year', 'Sale_Month', 'Sale_DayOfWeek'.\n",
+      "\n",
+      "--- Final DataFrame Info ---\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 42954 entries, 0 to 42954\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column                     Non-Null Count  Dtype         \n",
+      "---  ------                     --------------  -----         \n",
+      " 0   Listing_ID                 42954 non-null  int64         \n",
+      " 1   Price                      42954 non-null  int64         \n",
+      " 2   Agency_Name                42954 non-null  object        \n",
+      " 3   Postcode                   42954 non-null  int64         \n",
+      " 4   Address                    42954 non-null  object        \n",
+      " 5   Suburb                     42954 non-null  object        \n",
+      " 6   Longitude                  42954 non-null  float64       \n",
+      " 7   Latitude                   42954 non-null  float64       \n",
+      " 8   Property_Type              42954 non-null  object        \n",
+      " 9   Bedrooms                   42954 non-null  int64         \n",
+      " 10  Bathrooms                  42954 non-null  int64         \n",
+      " 11  Parking_Spaces             42954 non-null  int64         \n",
+      " 12  Date_Sold                  42954 non-null  datetime64[ns]\n",
+      " 13  Land_Size                  42954 non-null  int64         \n",
+      " 14  Primary_School_Name        42954 non-null  object        \n",
+      " 15  Primary_School_Distance    42954 non-null  int64         \n",
+      " 16  Primary_School_ICSEA       42954 non-null  int64         \n",
+      " 17  Secondary_School_Name      42954 non-null  object        \n",
+      " 18  Secondary_School_Distance  42954 non-null  int64         \n",
+      " 19  Secondary_School_ICSEA     42954 non-null  int64         \n",
+      " 20  Distance_to_CBD            42954 non-null  int64         \n",
+      " 21  Sale_Year                  42954 non-null  int32         \n",
+      " 22  Sale_Month                 42954 non-null  int32         \n",
+      " 23  Sale_DayOfWeek             42954 non-null  int32         \n",
+      "dtypes: datetime64[ns](1), float64(2), int32(3), int64(12), object(6)\n",
+      "memory usage: 7.7+ MB\n",
+      "\n",
+      "--- Final Descriptive Statistics ---\n",
+      "         Listing_ID         Price      Postcode     Longitude      Latitude  \\\n",
+      "count  4.295400e+04  4.295400e+04  42954.000000  42954.000000  42954.000000   \n",
+      "mean   1.391665e+08  8.611739e+05   6083.331890    115.867260    -31.956824   \n",
+      "min    1.014242e+08  1.000000e+05   6003.000000    115.732150    -32.133780   \n",
+      "25%    1.375440e+08  5.100000e+05   6026.000000    115.804930    -32.034580   \n",
+      "50%    1.409796e+08  6.875000e+05   6064.000000    115.854026    -31.948990   \n",
+      "75%    1.432742e+08  9.800000e+05   6149.000000    115.923790    -31.886392   \n",
+      "max    1.457244e+08  6.350000e+06   6166.000000    116.064601    -31.774076   \n",
+      "std    6.307984e+06  5.955753e+05     54.925552      0.077024      0.087963   \n",
+      "\n",
+      "           Bedrooms     Bathrooms  Parking_Spaces  \\\n",
+      "count  42954.000000  42954.000000    42954.000000   \n",
+      "mean       3.366555      1.731806        2.039554   \n",
+      "min        1.000000      1.000000        0.000000   \n",
+      "25%        3.000000      1.000000        1.000000   \n",
+      "50%        3.000000      2.000000        2.000000   \n",
+      "75%        4.000000      2.000000        2.000000   \n",
+      "max        9.000000      7.000000       12.000000   \n",
+      "std        0.878607      0.643751        1.129187   \n",
+      "\n",
+      "                           Date_Sold     Land_Size  Primary_School_Distance  \\\n",
+      "count                          42954  42954.000000             42954.000000   \n",
+      "mean   2022-06-23 16:23:52.155329024    519.875355               677.651837   \n",
+      "min              2006-06-13 00:00:00     29.000000                15.000000   \n",
+      "25%              2021-12-10 00:00:00    310.000000               408.000000   \n",
+      "50%              2023-02-14 00:00:00    507.000000               605.000000   \n",
+      "75%              2023-11-15 00:00:00    715.000000               855.000000   \n",
+      "max              2024-08-09 00:00:00   1533.000000              3243.000000   \n",
+      "std                              NaN    262.761673               392.699566   \n",
+      "\n",
+      "       Primary_School_ICSEA  Secondary_School_Distance  \\\n",
+      "count          42954.000000               42954.000000   \n",
+      "mean            1060.291358                1298.614355   \n",
+      "min              667.000000                  32.000000   \n",
+      "25%             1019.000000                 780.000000   \n",
+      "50%             1073.000000                1174.000000   \n",
+      "75%             1119.000000                1643.000000   \n",
+      "max             1197.000000                4735.000000   \n",
+      "std               78.269032                 738.564301   \n",
+      "\n",
+      "       Secondary_School_ICSEA  Distance_to_CBD     Sale_Year    Sale_Month  \\\n",
+      "count            42954.000000     42954.000000  42954.000000  42954.000000   \n",
+      "mean              1040.395493     11235.797178   2021.986171      6.417749   \n",
+      "min                723.000000       678.000000   2006.000000      1.000000   \n",
+      "25%                979.000000      7540.000000   2021.000000      4.000000   \n",
+      "50%               1036.000000     11257.000000   2023.000000      6.000000   \n",
+      "75%               1109.000000     15001.000000   2023.000000      9.000000   \n",
+      "max               1239.000000     20000.000000   2024.000000     12.000000   \n",
+      "std                 87.907244      4794.515182      2.239173      3.406264   \n",
+      "\n",
+      "       Sale_DayOfWeek  \n",
+      "count     42954.00000  \n",
+      "mean          2.24035  \n",
+      "min           0.00000  \n",
+      "25%           1.00000  \n",
+      "50%           2.00000  \n",
+      "75%           4.00000  \n",
+      "max           6.00000  \n",
+      "std           1.66540  \n",
+      "\n",
+      "Technical cleaning and feature engineering complete. The dataset is ready for Exploratory Data Analysis (EDA).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ---------------------------------------------------------------------------\n",
+    "# 2. TECHNICAL CLEANING & FEATURE ENGINEERING\n",
+    "#\n",
+    "# Decision: Based on data validation, the extreme values for both 'Price' and \n",
+    "# 'Land_Size' are considered legitimate and will be retained to ensure a\n",
+    "# complete market representation. Automated outlier removal will be skipped.\n",
+    "# ---------------------------------------------------------------------------\n",
+    "\n",
+    "# --- 2.1 Data Type Conversion ---\n",
+    "# convert 'Date_Sold' column from an object (text) to a datetime object.\n",
+    "\n",
+    "print(\"Starting technical cleaning...\")\n",
+    "df['Date_Sold'] = pd.to_datetime(df['Date_Sold'], errors='coerce')\n",
+    "\n",
+    "# Optional but recommended: Check for and handle any conversion errors.\n",
+    "if df['Date_Sold'].isnull().any():\n",
+    "    num_errors = df['Date_Sold'].isnull().sum()\n",
+    "    print(f\"Warning: Found {num_errors} date(s) that could not be parsed. These rows will be dropped.\")\n",
+    "    df.dropna(subset=['Date_Sold'], inplace=True)\n",
+    "\n",
+    "print(\"Successfully converted 'Date_Sold' to datetime objects.\")\n",
+    "\n",
+    "\n",
+    "# --- 2.2 Feature Engineering ---\n",
+    "# This step creates new, valuable features from existing data without altering it.\n",
+    "# We extract time-based features from the 'Date_Sold' column.\n",
+    "\n",
+    "df['Sale_Year'] = df['Date_Sold'].dt.year\n",
+    "df['Sale_Month'] = df['Date_Sold'].dt.month\n",
+    "df['Sale_DayOfWeek'] = df['Date_Sold'].dt.dayofweek # Note: Monday=0, Sunday=6\n",
+    "\n",
+    "print(\"Engineered new features: 'Sale_Year', 'Sale_Month', 'Sale_DayOfWeek'.\")\n",
+    "\n",
+    "\n",
+    "# --- 2.3 Final Verification ---\n",
+    "# A final check to ensure our DataFrame is ready for analysis.\n",
+    "\n",
+    "# We use .copy() here to create a definitive 'cleaned' version of the DataFrame.\n",
+    "# This can help prevent 'SettingWithCopyWarning' in later exploratory stages.\n",
+    "df_cleaned = df.copy()\n",
+    "\n",
+    "print(\"\\n--- Final DataFrame Info ---\")\n",
+    "df_cleaned.info()\n",
+    "\n",
+    "print(\"\\n--- Final Descriptive Statistics ---\")\n",
+    "print(df_cleaned.describe())\n",
+    "\n",
+    "print(\"\\nTechnical cleaning and feature engineering complete. The dataset is ready for EDA.\")"
+   ]
   }
  ],
  "metadata": {
